# gd-parking-spots

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/parkingspots/: apps.py  http_client.py  models.py  views.py
src/parkingspots/templates/parkingspots/: base.html  index.html
src/src/: asgi.py  settings.py  urls.py
