[project]
name = "gd-parking-spots"
version = "0.1.0"
description = "A Python package for managing parking spots in city of Gdańsk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py310"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv"
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
select = ["F", "E", "W", "D"]
ignore = [
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",   # non-imparative mood
    "D415",   # ends in punctuation
    "D417",   # undocumented param
    "E402",   # false positives for local imports,
    "W605",   # invalid escape squence
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/alembic/env.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
skip-magic-trailing-comma = false